--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-22 [陷入禁药争议，中国游泳选手的奥运奖牌会被收回吗](/articles/nyt/1042840.md)
+
 4-22 [“美国队被骗了”：中国游泳选手药检风波引发争议与愤怒](/articles/nyt/1042841.md)
 
 4-22 [23名中国游泳选手东京奥运会前药检阳性，仍参赛并夺牌](/articles/nyt/1042842.md)
@@ -598,6 +600,4 @@
 1-13 [聚焦台湾大选：民进党力拼继续执政，两岸关系成焦点议题](/articles/nyt/1043138.md)
 
 1-12 [台湾大选前瞻：它为何重要以及对中美意味着什么](/articles/nyt/1043139.md)
-
-1-12 [美国及盟国对也门胡塞武装目标发动打击](/articles/nyt/1043140.md)
 
