--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-22 [布林肯加强外交周旋 美军在加沙地带再空投人道救援物资](/articles/voa/1016217.md)
+
 4-22 [内塔尼亚胡威胁攻击拉法以解救哈马斯可能扣在那里的人质](/articles/voa/1016218.md)
 
 4-22 [TikTok对美国众院通过可能将其禁止的法案提出言论自由关切](/articles/voa/1016219.md)
@@ -598,6 +600,4 @@
 4-10 [美参院两党领袖步调不一致，TikTok法案进程前景尚不明朗](/articles/voa/1016515.md)
 
 4-10 [拜登与岸田峰会旨在建立更深入、区域整合度更高的美日安全关系](/articles/voa/1016516.md)
-
-4-10 [在朔尔茨访华前夕，研究表明德国经济仍依赖中国](/articles/voa/1016517.md)
 
